# FastAPI-Boilerplate

./: .dockerignore  .env  .env.test  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements-test.txt
src/: server.py
src/application/api/: dependencies.py
src/application/api/v1/: __init__.py
src/application/api/v1/service/: __init__.py
src/application/api/v1/service/sample/: sample_route.py  sample_schema.py  sample_service.py
src/core/: exception_handlers.py  exceptions.py  logger.py
src/core/config/: __init__.py  app_config.py  crypt_config.py  database_config.py  infra_config.py
src/crud/: base_crud.py  sample_crud.py
src/decorator/: __init__.py
src/infrastructure/celery/: worker.py
src/infrastructure/database/: models.py
src/infrastructure/database/migration/: env.py
src/middleware/: __init__.py  logging_middleware.py  yapppi_profile.py
src/utils/: model_cast.py
tests/: README.md
tests/Integration/api/v1/: test_sample_route.py
tests/Integration/infrastructure/database/: test_base_crud.py
tests/unit/utils/: test_model_cast.py
