[dependency-groups]
dev = [
  "cryptography>=45.0.5",
  "isort>=6.0.1",
  "pre-commit>=4.2.0",
  "ruff>=0.11.10",
  "snakeviz>=2.2.2",
  "sqlacodegen-v2>=0.1.4",
  "yappi>=1.6.10"
]
test = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "pytest-env>=1.1.5",
  "aiosqlite>=0.20.0",
  "factory-boy>=3.3.1",
  "faker>=30.8.2"
]

[flake8]
max-line-length = 80

[project]
dependencies = [
  "aiohttp[speedups]>=3.12.15",
  "alembic>=1.16.2",
  "apprise>=1.9.4",
  "asyncpg>=0.30.0",
  "bandit>=1.8.5",
  "celery>=5.5.3",
  "click>=8.1.8",
  "fastapi>=0.115.13",
  "fastapi-users[redis,sqlalchemy]>=14.0.1",
  "flower>=2.0.1",
  "httpx>=0.28.1",
  "loguru>=0.7.3",
  "psycopg2-binary>=2.9.10",
  "pydantic-settings>=2.9.1",
  "pylint>=3.3.7",
  "python-dotenv>=1.1.0",
  "sqlalchemy>=2.0.41",
  "starlette-admin>=0.15.1",
  "toml>=0.10.2",
  "types-toml>=0.10.8.20240310",
  "uvicorn>=0.34.2"
]
description = "FastAPI-Boilerplate"
name = "FastAPI-Boilerplate"
readme = "README.md"
requires-python = ">=3.12"
version = "0.0.1"

[tool.mypy]
explicit_package_bases = true
files = ["main.py", "src/"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["toml.*"]

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers"
env = [
  "TEST_DATABASE_URL = postgresql://test_user:test_password@localhost:5432/test_database",
  "TEST_ASYNC_DATABASE_URL = postgresql+asyncpg://test_user:test_password@localhost:5432/test_database"
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests"
]
minversion = "6.0"
python_classes = [
  "Test*"
]
python_files = [
  "test_*.py",
  "*_test.py"
]
python_functions = [
  "test_*"
]
pythonpath = [
  "."
]
testpaths = [
  "tests"
]

[tool.pytest_asyncio]
asyncio_mode = "auto"
